--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="Content-Security-Policy" content="default-src *; script-src *;img-src * 'self' data: http:;">
     <title>Commit Labs</title>
     <link rel="stylesheet" href="style.css">
   </head>
