--- a/overlay.html
+++ b/overlay.html
@@ -15,10 +15,7 @@
 	<script src="rotate.js" crossorigin="anonymous"></script>
 	<script src="exif.js"></script>
 	<script src="binaryajax.js"></script>
-	<script type = "text/javascript">
-	//JAVASCRIPT
-	updateSlider();
-	</script>
+	<script src="update-slider"></script>
 	<body>
 
 
