--- a/overlay.html
+++ b/overlay.html
@@ -15,7 +15,7 @@
 	<script src="rotate.js" crossorigin="anonymous"></script>
 	<script src="exif.js"></script>
 	<script src="binaryajax.js"></script>
-	<script src="update-slider"></script>
+	<script src="update-slider.js"></script>
 	<body>
 
 
