--- a/overlay.html
+++ b/overlay.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<meta http-equiv="Content-Security-Policy" content="default-src *; script-src *;img-src * 'self' data: https:;">
+		<!-- <meta http-equiv="Content-Security-Policy" content="default-src *; script-src *;img-src * 'self' data: https:;"> -->
 		<title>Pierre's Birthday Filter</title>
 		<link rel="stylesheet" href="stylesheet.css" title="external style sheet">
 		<link href="https://fonts.googleapis.com/css?family=Roboto:100,200,400,500" rel="stylesheet">
